Support #16359 Fix get-one JSON Schema validation in integration tests renamed region schemas to follow getOne getMany namings. Changed strings to URI to make it less error prone.